# tsticker

./: .gitignore  .nerve.toml  README.md  pyproject.toml
src/tsticker/: cli.py  const.py  utils.py
src/tsticker/core/: __init__.py  const.py  create.py  rules.json
